# gothamScraper

./: OP_registration.py  events.json  my_calendar.ics  pyproject.toml  register.py  requirements.txt  scrape_mixedOP.py  tst.html
