[project]
name = "gothamscraper"
version = "0.1.0"
description = "automates Open Play Registration"
authors = [
    {name = "Wilson",email = "wilson.diant@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
'beautifulsoup4',
'click',
'dateutil',
'dotenv',
'icalendar',
'InquirerPy',
'playwright',
'schedule',
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
